dynamic gamma for both SDR/HDR